--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,7 @@
 
 :root {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #27272a;
 }
 
 html {
